Fix .sql file icon not showing on tab bar

--- a/styles-icons.less
+++ b/styles-icons.less
@@ -76,7 +76,7 @@
 .tree-view > .directory .header > .icon-repo.name::before {
 	content: @repo;
 }
-.tree-view .directory .name[data-name$='.sql']::before {
+[data-name$='.sql']::before {
 	content: @database;
 }
 
